tests/programs/valid/FileNameExample.java
// File: FileNameExample.java
public class FileNameExample {
    // Class implementation
}
