tests/programs/invalid/class_literals.java
public class class_literals {
  protected java.lang.Class x = A.class;
}